# ambient

./: AmbientConfig.cmake.in  CMakeLists.txt  README.md
deep_learning/: CMakeLists.txt  logistic_regression.cpp  neural_network.h
examples/: CMakeLists.txt  Makefile  atomic.cpp  matrix.cpp  mp_gemm.cpp  mp_gemm_simple.cpp  partitioned_vector.cpp
src/ambient/: ambient.hpp
src/ambient/channels/mpi/: channel.h  channel.hpp  collective.h  collective.hpp
src/ambient/channels/nop/: channel.h
src/ambient/container/: atomic.hpp  block.hpp  future.hpp  vector.hpp
src/ambient/container/iterator/: associated_iterator.hpp
src/ambient/container/numeric/: traits.hpp
src/ambient/container/numeric/bindings/: alps.hpp  mkl.hpp  plasma.hpp  types.hpp
src/ambient/container/numeric/matrix/: matrix_algorithms.hpp  tiles.h  tiles.hpp  tiles_algorithms.hpp  utils.hpp
src/ambient/container/numeric/matrix/detail/: kernels.hpp  math.hpp  utils.hpp
src/ambient/container/partitioned_vector/: algorithms.hpp
src/ambient/controllers/: actor.h  actor.hpp  backbone.h  backbone.hpp  collector.h  collector.hpp  context.h  context.hpp  controller.h  controller.hpp  get.h  get.hpp  meta.h  meta.hpp  scope.h  scope.hpp  set.h  set.hpp
src/ambient/interface/: kernel.hpp  kernel_inliner.hpp  lambda.hpp  typed.hpp
src/ambient/memory/: delegated.h  factory.hpp  pool.hpp  region.hpp  types.h
src/ambient/memory/cpu/: bulk.h  comm_bulk.h  comm_bulk.hpp  data_bulk.h  data_bulk.hpp  fixed.hpp  instr_bulk.h  instr_bulk.hpp  new.h  new.hpp  standard.hpp
src/ambient/model/: history.h  history.hpp  model.hpp  revision.h  revision.hpp  transformable.h  transformable.hpp
src/ambient/utils/: auxiliary.hpp  dim2.hpp  guard_once.hpp  io.hpp  math.hpp  mutex.hpp  rank_t.hpp  reduce.hpp  threaded_for_each.hpp  threading.hpp  vt_override.hpp
src/utils/: catch.hpp  index_tuple.h  meminfo.hpp  mkl_parallel.hpp  rss.hpp  testing.hpp  timer.hpp
tests/functional/: CMakeLists.txt  add.cpp  adjoint.cpp  cast.cpp  conj.cpp  elements.cpp  hermitian.cpp  identity.cpp  inverse.cpp  lq.cpp  qr.cpp  resize.cpp  rm_cols.cpp  rm_rows.cpp  sqrt.cpp  sub.cpp  trace.cpp  transpose.cpp
tests/performance/: CMakeLists.txt  ambient.gemm.cpp  ambient.lq.cpp  ambient.qr.cpp
